--- a/app/src/main/res/layout/displaystatistic_layout.xml
+++ b/app/src/main/res/layout/displaystatistic_layout.xml
@@ -2,25 +2,47 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_weight="1"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/txt_displaystatistic_Tong"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
         android:textColor="@color/black"
-        android:fontFamily="@font/muli_black"
+        style="@style/TextAppearance.AppCompat.Headline"
         android:text="Tong doanh thu"
         android:gravity="center"/>
     <ListView
         android:id="@+id/lvStatistic"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:padding="5dp"
-        android:verticalSpacing="15dp"
-        >
-
+        android:layout_weight="1"
+        android:verticalSpacing="15dp">
     </ListView>
+
+    <LinearLayout
+        android:id="@+id/ll_tongdoanhthu"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_height="56dp">
+        <TextView
+            android:id="@+id/tv_index_money"
+            android:layout_width="wrap_content"
+            android:gravity="center"
+            android:text="1000000"
+            style="@style/TextAppearance.AppCompat.Menu"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:text=": Tong Tien"
+            android:gravity="center_vertical"
+            style="@style/TextAppearance.AppCompat.Menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+
 
 </LinearLayout>
