--- a/app/src/main/res/layout/custom_layout_displaycategory.xml
+++ b/app/src/main/res/layout/custom_layout_displaycategory.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:background="@drawable/espresso"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         />
     <RelativeLayout
         android:layout_width="match_parent"
