--- a/app/src/main/res/layout/custom_layout_displaymenu.xml
+++ b/app/src/main/res/layout/custom_layout_displaymenu.xml
@@ -11,7 +11,7 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:src="@drawable/cafe_americano"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             />
         <TextView
             android:id="@+id/txt_custommenu_TenMon"
